# ai-gaming-agent-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  idea.md  pyproject.toml
.claude-task-master/: criteria.txt  goal.txt  plan.md  progress.md  state.json
.github/workflows/: ci.yml
docs/: architecture.txt  configuration.md  configuration.txt  installation.txt  integration-testing.md  overview.txt  security.txt  testing.md  tools.txt  troubleshooting.txt  workflow.md  workflow.txt
examples/: README.md  terminal_demo.py
src/ai_gaming_agent/: __init__.py  cli.py  config.py  http_server.py  server.py
src/ai_gaming_agent/tools/: __init__.py  files.py  keyboard.py  mouse.py  screen.py  system.py  vlm.py  workflow.py
tests/: __init__.py  test_cli.py  test_config.py  test_http_server.py  test_tools.py  test_vlm.py  test_workflow.py
tests/integration/: __init__.py  conftest.py  test_demo_workflow.py  test_full_workflow.py  test_gui_automation.py
